# rust-rocket-jwt-service

./: Cargo.toml  diesel.toml
deploy/: docker-compose.yml
migrations/2020-10-26-205322_add-schema/: down.sql
migrations/2020-10-26-205822_create_schema/: down.sql  up.sql
migrations/2020-10-26-205823_add_user_table/: down.sql  up.sql
migrations/2020-10-26-213355_add_refresh_token/: down.sql  up.sql
src/: db.rs  main.rs  models.rs  schema.rs
src/handlers/: login.rs
