[package]
name = "rust-rocket-jwt-service"
version = "0.1.0"
authors = ["Sergey Kuznetsov <90.sergey.kuznetsov@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.5"
rocket_codegen = "0.4.5"
diesel = { version = "1.4.5", features = ["postgres", "r2d2", "uuid"] }
uuid = { version = "0.6.0", features = ["v4", "serde"] }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
r2d2 = "0.8"
r2d2-diesel = "1.0"
dotenv = "0.15.0"
bcrypt = "0.9"

[dependencies.rocket_contrib]
version = "0.4.5"
default-features = false
features = ["diesel_postgres_pool", "json"]
